2009-01-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/web/ejabberd_web_admin.erl, src/ejabberd_listener.erl: Fix some
	eDoc @spec directives.

	* src/ejabberd_sm.erl (get_vh_session_list/1): Remove a bad
	list_to_binary/1; now that exmpp_stringprep return the correct type,
	it was used on a binary().

	* src/acl.erl: Document every functions to clarify the types to
	give and returned.

2009-01-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/acl.erl (match_acl/3): Use string() version of
	User/Server/Resource to match an ACL.

	* src/cyrsasl.erl: Return invalid-mechanism when a mechanism isn't
	supported instead of no-mechanism, which wasn't standard-compliant.

	* src/mod_pubsub/nodetree_virtual.erl (create_node/5): Use string()
	version of UserName and UserHost.

	* src/mod_private.erl (process_iq_get/3, process_iq_set/3): Use
	binary() version of LUser and LServer.
	(convert_to_exmpp2/2): User and server are stored as binary().

	* src/adhoc.erl, src/ejabberd_c2s.erl, src/ejabberd_s2s.erl,
	src/ejabberd_s2s_in.erl, src/ejabberd_s2s_out.erl,
	src/ejabberd_service.erl, src/ejabberd_sm.erl,
	src/ejabberd_system_monitor.erl, src/jd2ejd.erl, src/jlib.erl,
	src/mod_adhoc.erl, src/mod_announce.erl, src/mod_caps.erl,
	src/mod_configure.erl, src/mod_configure2.erl, src/mod_disco.erl,
	src/mod_irc/mod_irc.erl, src/mod_irc/mod_irc_connection.erl,
	src/mod_last.erl, src/mod_last_odbc.erl, src/mod_muc/mod_muc.erl,
	src/mod_muc/mod_muc_log.erl, src/mod_muc/mod_muc_room.erl,
	src/mod_offline.erl, src/mod_offline_odbc.erl, src/mod_privacy.erl,
	src/mod_privacy_odbc.erl, src/mod_proxy65/mod_proxy65_service.erl,
	src/mod_pubsub/mod_pubsub.erl, src/mod_register.erl,
	src/mod_roster.erl, src/mod_roster_odbc.erl, src/mod_service_log.erl,
	src/mod_shared_roster.erl, src/mod_stats.erl, src/mod_vcard.erl,
	src/mod_vcard_ldap.erl, src/mod_vcard_odbc.erl,
	src/web/ejabberd_http_poll.erl, src/web/ejabberd_web.erl,