@@ -1,3 +1,10 @@
+2009-01-22  Pablo Polvorin  <pablo.polvorin@process-one.net>
+
+	* src/ejabberd_sm.erl: Fix typo (node -> lnode).
+
+	* src/ejabberd_c2s.erl: Reuse the domain in binary() format to
+	make the jid.
+
 2009-01-22  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/web/ejabberd_web_admin.erl, src/ejabberd_listener.erl: Fix some
